--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <app-navbar></app-navbar>
 <div class="container">
   <!-- <app-user></app-user> -->
-  <app-users></app-users>
-</div>
+  <!-- <app-users></app-users> -->
+  <app-posts></app-posts>
+</div> 
